--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django
 django-filter
 djangorestframework
-psycopg2
+asgiref==3.5.2
+gunicorn==20.1.0
+psycopg2==2.8.6
+sqlparse==0.4.2
+whitenoise==6.2.0
